# Veridian

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DECISIONS.md  DEPLOYMENT.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  logging.py  rate_limit.py  redis.py
backend/app/embeddings/: __init__.py  base.py  batch.py  deps.py  factory.py  openai_provider.py  retry.py  sentence_transformers_provider.py
backend/app/generation/: __init__.py  base.py  factory.py  groq_provider.py  ollama_provider.py  openai_provider.py  service.py
backend/app/models/: __init__.py  base.py  chat.py  chunk.py  document.py  user.py
backend/app/prompts/: __init__.py  service.py
backend/app/reranking/: __init__.py  base.py  cross_encoder.py  factory.py  noop.py
backend/app/retrieval/: __init__.py  base.py  hybrid.py  keyword.py  service.py  vector.py
backend/app/routers/: auth.py  chat.py  documents.py  health.py  users.py
backend/app/schemas/: auth.py  chat.py  chunk.py  common.py  document.py  health.py  rag.py  user.py
backend/app/services/: auth.py  chat_service.py  embedding_service.py  ingestion.py
backend/app/storage/: __init__.py  base.py  deps.py  local.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_embeddings.py  test_ingestion.py  test_models.py  test_rag.py
frontend/: Dockerfile  (+7 more)
(+37 files in other folders)
