[project]
name = "veridian-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends() in default args is intentional

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
